modificaciones al 1 y 2, agregado ejercicio 3

--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -10,4 +10,8 @@
     <p>El lenguaje HTML es tan <strong>sencillo</strong>, que prácticamente se entiende sin estudiar el sgnificado de sus etiquetas principales. <br>
     Además de textos en <strong>negrita</strong>, también se puede poner en <em>cursiva</em> o <del>tachado</del>.</p>
 </body>
+<footer style="text-align: center;">
+    <a href="ejercicio2.html">Ir al ejercicio 2</a>
+</footer>
+
 </html>
