--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -11,7 +11,7 @@
     <h3>Un cuento de Jorge Bucay</h3>
 
     <p>
-        Esta es la historia de un hombre al que yo definiría como buscador. Un buscador es alguien
+        Esta es la historia de un hombre al que yo definiría como <em><strong>buscador</strong></em>. Un buscador es alguien
         que busca. No necesariamente es alguien que encuentra. Tampoco es alguien que sabe lo
         que está buscando. Es simplemente alguien para quien su vida es una búsqueda.
     </p>
@@ -32,18 +32,16 @@
         El Buscador traspasó el portal y empezó a caminar lentamente entre las piedras blancas
         que estaban distribuidas como por azar entre los árboles. Dejó que sus ojos, que eran los
         de un buscador, pasearan por el lugar... y quizá por eso descubrió, sobre una de las
-        piedras, aquella inscripción? Abedul Tare, vivió 8 años, 6 meses, 2 semanas y 3 días? Se
+        piedras, aquella inscripción: "Abedul Tareb, vivió 8 años, 6 meses, 2 semanas y 3 días". Se
         sobrecogió un poco al darse cuenta de que esa piedra no era simplemente una piedra. Era
         una lápida, y sintió pena al pensar que un niño de tan corta edad estaba enterrado en ese
-        lugar?
+        lugar.
     </p>
     
     <p>
         Mirando a su alrededor, el hombre se dio cuenta de que la piedra de al lado también tenía
-una inscripción. Al acercarse a leerla, descifró: Lamar Kalib, vivió 5 años, 8 meses y 3
-semanas. El buscador se sintió terriblemente conmocionado. Este hermoso lugar era un
-
-cementerio y cada piedra una lápida. Todas tenían inscripciones similares: un nombre y el
+una inscripción. Al acercarse a leerla, descifró: "Lamar Kalib, vivió 5 años, 8 meses y 3
+semanas". El buscador se sintió terriblemente conmocionado. Este hermoso lugar era un cementerio y cada piedra una lápida. Todas tenían inscripciones similares: un nombre y el
 tiempo de vida exacto del muerto, pero lo que lo contactó con el espanto, fue comprobar
 que, el que más tiempo había vivido, apenas sobrepasaba 11 años. Embargado por un
 dolor terrible, se sentó y se puso a llorar.
@@ -92,9 +90,17 @@ tiempo de lo disfrutado, para escribirlo sobre su tumba. Porque ése es, para no
         </blockquote> 
     </p>
 
+    <p>
+        <em>
+            <strong>
+                Fin.
+            </strong>
+        </em>
+    </p>
+
     <footer style="text-align: center;">
         <a href="ejercicio3.html">Ir al ejercicio 3</a><br>
-        <a href="ejercicio1.html">Volver al ejercicio 1</a>
+        <a href="ejercicio1.html">Volver</a>
     </footer>
 </body>
 </html>
