--- a/ejercicio3.html
+++ b/ejercicio3.html
@@ -27,5 +27,9 @@
         <a href="ejercicio2.html">Ejercicio 2</a>
         </p>
     
+    <footer style="text-align: center;">
+        <a href="ejercicio4.html">Ir al ejercicio 4</a><br>
+        <a href="ejercicio2.html">Volver</a>
+    </footer>
 </body>
 </html>
